--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,11 +10,11 @@ depend:
 commands:
   textFrame:
     description: Main BlockFonts Command
-    usage: |
-      /<command> create <frame-name> - create text frame.
-      /<command> remove <frame-name> - remove text frame.
-      /<command> addLangFrame <frame-name> <lang> - add lang for frame.
-      /<command> removeLangFrame <frame-name> <lang> - remove lang from frame.
+#    usage: |
+#      /<command> create <frame-name> - create text frame.
+#      /<command> remove <frame-name> - remove text frame.
+#      /<command> addLangFrame <frame-name> <lang> - add lang for frame.
+#      /<command> removeLangFrame <frame-name> <lang> - remove lang from frame.
 permissions:
   blockFonts.use:
     default: op
